--- a/.github/workflows/push-design-system-data.yaml
+++ b/.github/workflows/push-design-system-data.yaml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Start
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20"
         run: |
           echo "🚀 Analyzing adoption data and pushing to zeroheight"
           npx @zeroheight/adoption-cli analyze --interactive false --repo-name example-airorange-app 
