--- a/.github/workflows/push-design-system-data.yaml
+++ b/.github/workflows/push-design-system-data.yaml
@@ -10,10 +10,11 @@ jobs:
   analyze:
     runs-on: ubuntu-latest
     steps:
-      - name: Start
+      - name: Setup
         uses: actions/setup-node@v3
         with:
           node-version: "20"
+      - name: Start
         run: |
           echo "🚀 Analyzing adoption data and pushing to zeroheight"
           npx @zeroheight/adoption-cli analyze --interactive false --repo-name example-airorange-app 
